Created Thredds installation doc